<resources>
    <string name="app_name">ssukssuk</string>
    <!--activity_main-->
    <string name="btnRegister">검색</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--login-->
    <string name="login_id">아이디</string>
    <string name="login_pw">비밀번호</string>
    <string name="login">로그인</string>
    <string name="login_basic">회원가입</string>
    <string name="idfind">아이디 찾기</string>
    <string name="pwfind">비밀번호 찾기</string>
    <!--home-->
    <string name="home_led_text">Led on/off</string>
    <!-- TODO: Remove or change this placeholder text -->

    <!-- findid -->
    <string name="btnfindphone">휴대폰 번호</string>
    <string name="btnfindemail">이메일</string>

    <string name="item1">텀블러</string>
    <string name="item2">슬리퍼</string>
    <string name="item3">케이스</string>
    <string name="item4">인형</string>
    <string name="item5">피큐어</string>
    <string name="item6">안마봉</string>
    <string name="item7">마우스패드</string>
    <string name="item8">노트</string>
    <string name="item9">필통</string>
    <string name="item10">노트북파우치</string>
    <string name="item11">티셔츠</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!--fragment_3.xml-->
    <string name="edtUrl_hint">https:// or http://</string>
    <string name="btnSave">설정</string>
</resources>